# gnt-accentuation

./: .python-version  README.md  analyse_morphgnt.py  notes.txt  pyproject.toml  requirements.txt
