[tool.poetry]
name = "gnt-accentuation"
version = "0.1.0"
description = ""
authors = ["James Tauber <jtauber@jtauber.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-sblgnt = "*"
greek-accentuation = "*"
greek-utils = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
